runtime/pavex_macros/tests/wrap/fail/not_a_function.stderr
error: #[pavex::wrap] can only be applied to functions and methods.
 --> tests/wrap/fail/not_a_function.rs:7:5
  |
7 |     const A: usize = 42;
  |     ^^^^^^^^^^^^^^^^^^^^
